Corrigindo exemplos.